--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -12,31 +12,47 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :property_name %>
+    <%= f.label :物件名 %>
     <%= f.text_field :property_name %>
   </div>
 
   <div class="field">
-    <%= f.label :rent %>
+    <%= f.label :賃料 %>
     <%= f.number_field :rent %>
   </div>
 
   <div class="field">
-    <%= f.label :address %>
+    <%= f.label :住所 %>
     <%= f.text_area :address %>
   </div>
 
   <div class="field">
-    <%= f.label :age_of_a_building %>
+    <%= f.label :築年数 %>
     <%= f.number_field :age_of_a_building %>
   </div>
 
   <div class="field">
-    <%= f.label :note %>
+    <%= f.label :備考 %>
     <%= f.text_area :note %>
   </div>
 
+<Hr>
+
+      <%= f.fields_for :stations do |station_f| %>
+
+        <%= station_f.label :最寄り駅 %><br>
+
+        <%= station_f.label :路線名 %><br>
+        <%= station_f.text_field :line_name %><br>
+
+        <%= station_f.label :駅名 %><br>
+        <%= station_f.text_field :station_name %><br>
+
+        <%= station_f.label :徒歩分数 %><br>
+        <%= station_f.text_field :walking_time %>分<br>
+      <% end %>
+
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :登録する %>
   </div>
 <% end %>
