--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -12,35 +12,37 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :物件名 %>
-    <%= f.text_field :property_name %>
+    <%= f.label :物件名 %><br>
+    <%= f.text_field :property_name %><br>
   </div>
 
   <div class="field">
-    <%= f.label :賃料 %>
-    <%= f.number_field :rent %>
+    <%= f.label :賃料 %><br>
+    <%= f.number_field :rent %>円<br>
   </div>
 
   <div class="field">
-    <%= f.label :住所 %>
-    <%= f.text_area :address %>
+    <%= f.label :住所 %><br>
+    <%= f.text_area :address %><br>
   </div>
 
   <div class="field">
-    <%= f.label :築年数 %>
-    <%= f.number_field :age_of_a_building %>
+    <%= f.label :築年数 %><br>
+    <%= f.number_field :age_of_a_building %>年<br>
   </div>
 
   <div class="field">
-    <%= f.label :備考 %>
-    <%= f.text_area :note %>
+    <%= f.label :備考 %><br>
+    <%= f.text_area :note %><br>
   </div>
 
 <Hr>
 
+     <% station_count = 1 %>
+
       <%= f.fields_for :stations do |station_f| %>
 
-        <%= station_f.label :最寄り駅 %><br>
+        <h3>最寄り駅<%= station_count %></h3>
 
         <%= station_f.label :路線名 %><br>
         <%= station_f.text_field :line_name %><br>
@@ -49,10 +51,20 @@
         <%= station_f.text_field :station_name %><br>
 
         <%= station_f.label :徒歩分数 %><br>
-        <%= station_f.text_field :walking_time %>分<br>
+        <%= station_f.number_field :walking_time %>分<br>
+
+       <% station_count += 1 %>
+        
       <% end %>
 
-  <div class="actions">
-    <%= f.submit :登録する %>
-  </div>
+    <% if action_name == 'new' %>
+      <div class="actions">
+        <%= f.submit :登録する %>
+      </div>
+    <% elsif action_name == 'edit' %>
+      <div class="actions">
+        <%= f.submit :更新する %>
+      </div>
+    <% end %>
+
 <% end %>
