--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -1,29 +1,49 @@
-<p id="notice"><%= notice %></p>
-
 <p>
-  <strong>Name:</strong>
+  <strong>物件名:</strong>
   <%= @property.property_name %>
 </p>
 
 <p>
-  <strong>Rent:</strong>
+  <strong>賃料:</strong>
   <%= @property.rent %>
 </p>
 
 <p>
-  <strong>Address:</strong>
+  <strong>住所:</strong>
   <%= @property.address %>
 </p>
 
 <p>
-  <strong>Age of a building:</strong>
+  <strong>築年数:</strong>
   <%= @property.age_of_a_building %>
 </p>
 
 <p>
-  <strong>Note:</strong>
+  <strong>備考:</strong>
   <%= @property.note %>
 </p>
 
-<%= link_to 'Edit', edit_property_path(@property) %> |
-<%= link_to 'Back', properties_path %>
+<Hr>
+
+<% @property.stations.each do |station| %>
+
+<h3>最寄り駅</h3>
+
+  <p>
+    <strong>路線名:</strong>
+    <%= station.line_name %>
+  </p>
+
+  <p>
+    <strong>駅名:</strong>
+    <%= station.station_name %>
+  </p>
+
+  <p>
+    <strong>徒歩分数:</strong>
+    <%= station.walking_time %>分
+  </p>
+<% end %>
+
+<%= link_to '編集', edit_property_path(@property) %> |
+<%= link_to '戻る', properties_path %>
