09_edit index and show view like sample again

--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -15,9 +15,9 @@
     <% @properties.each do |property| %>
       <tr>
         <td><%= property.property_name %></td>
-        <td><%= property.rent %></td>
+        <td><%= property.rent.to_s(:delimited) %>円</td>
         <td><%= property.address %></td>
-        <td><%= property.age_of_a_building %></td>
+        <td><%= property.age_of_a_building %>年</td>
         <td><%= property.note %></td>
         <td><%= link_to '詳細', property %></td>
         <td><%= link_to '編集', edit_property_path(property) %></td>
