--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -5,7 +5,7 @@
 
 <p>
   <strong>賃料:</strong>
-  <%= @property.rent %>
+  <%= @property.rent.to_s(:delimited) %>円
 </p>
 
 <p>
@@ -15,7 +15,7 @@
 
 <p>
   <strong>築年数:</strong>
-  <%= @property.age_of_a_building %>
+  <%= @property.age_of_a_building %>年
 </p>
 
 <p>
@@ -25,9 +25,11 @@
 
 <Hr>
 
+<% station_count = 1 %>
+
 <% @property.stations.each do |station| %>
 
-<h3>最寄り駅</h3>
+<h3>最寄り駅<%= station_count %></h3>
 
   <p>
     <strong>路線名:</strong>
@@ -43,6 +45,8 @@
     <strong>徒歩分数:</strong>
     <%= station.walking_time %>分
   </p>
+
+  <% station_count += 1 %>
 <% end %>
 
 <%= link_to '編集', edit_property_path(@property) %> |
