--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(property) do |f| %>
+<%= form_for(property, remote: true) do |f| %>
   <% if property.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(property.errors.count, "error") %> prohibited this property from being saved:</h2>
@@ -37,25 +37,17 @@
   </div>
 
 <Hr>
-
      <% station_count = 1 %>
 
-      <%= f.fields_for :stations do |station_f| %>
+      <%= f.fields_for :stations do |builder| %>
 
-        <h3>最寄り駅<%= station_count %></h3>
-
-        <%= station_f.label :路線名 %><br>
-        <%= station_f.text_field :line_name %><br>
-
-        <%= station_f.label :駅名 %><br>
-        <%= station_f.text_field :station_name %><br>
-
-        <%= station_f.label :徒歩分数 %><br>
-        <%= station_f.number_field :walking_time %>分<br>
-
-       <% station_count += 1 %>
+        <h3>最寄り駅<%= builder.index + 1 %></h3>
         
+         <%= render "station_fields", f: builder %>
+
       <% end %>
+      
+      <%= link_to_add_fields "最寄り駅追加", f, :stations %>
 
     <% if action_name == 'new' %>
       <div class="actions">
